<resources>
    <string name="app_name">DUET</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="content_description_media">dummy</string>
    <string name="title">Material-UI-Basic</string>
    <string name="secondary_text">a, b, c님 참여중</string>
    <string name="supporting_text">멘토: mentor님</string>
    <string name="action_1">참여하기</string>
    <string name="loading_message">로딩 중…</string>
    <string name="math">수학</string>
    <string name="science">과학</string>
    <string name="programming">프로그래밍</string>
    <string name="art">미술</string>
    <string name="music">음악</string>
    <string name="korean">국어</string>
    <string name="self_improve">자기계발</string>
    <string name="label">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">질문</string>

</resources>
