<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DUET"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/title"
        />





    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:overScrollMode="always"
        android:scrollbars="none"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"


        >
            <com.google.android.material.chip.ChipGroup
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >
                <com.google.android.material.chip.Chip
                    android:id="@+id/sefChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/self_improve"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/questionChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/mathChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/scienceChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/programChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programming"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/artChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/art"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/koreanChip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean"/>

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/post_recyclerview"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="create post"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add_foreground"/>
    </FrameLayout>
</LinearLayout>